--- a/_includes/cv-contact.html
+++ b/_includes/cv-contact.html
@@ -1,6 +1,11 @@
 <div id="contact-info">
 
-    {% if page.homepage %}
+    {% if page.GoogleScolar %}
+    <i class="fi-home" style="margin-left:1em"></i>
+    <a href="{{ page.homepage.url }}" style="margin-left:0.5em"> {{ page.homepage.text }}</a>
+    {% endif %}
+
+    {% if page.ResearchGate %}
     <i class="fi-home" style="margin-left:1em"></i>
     <a href="{{ page.homepage.url }}" style="margin-left:0.5em"> {{ page.homepage.text }}</a>
     {% endif %}
