--- a/_includes/cv-contact.html
+++ b/_includes/cv-contact.html
@@ -2,12 +2,12 @@
 
     {% if page.GoogleScolar %}
     <i class="fi-home" style="margin-left:1em"></i>
-    <a href="{{ page.homepage.url }}" style="margin-left:0.5em"> {{ page.homepage.text }}</a>
+    <a href="{{ page.GoogleScolar.url }}" style="margin-left:0.5em"> {{ page.GoogleScolar.text }}</a>
     {% endif %}
 
     {% if page.ResearchGate %}
-    <i class="fi-home" style="margin-left:1em"></i>
-    <a href="{{ page.homepage.url }}" style="margin-left:0.5em"> {{ page.homepage.text }}</a>
+    <i class="fi-research" style="margin-left:1em"></i>
+    <a href="{{ page.ResearchGate.url }}" style="margin-left:0.5em"> {{ page.ResearchGate.text }}</a>
     {% endif %}
 
     {% if page.email %}
