--- a/_includes/cv-contact.html
+++ b/_includes/cv-contact.html
@@ -1,12 +1,12 @@
 <div id="contact-info">
 
     {% if page.GoogleScolar %}
-    <i class="fi-home" style="margin-left:1em"></i>
+    <i class="fa fa-google" style="margin-left:1em"></i>
     <a href="{{ page.GoogleScolar.url }}" style="margin-left:0.5em"> {{ page.GoogleScolar.text }}</a>
     {% endif %}
 
     {% if page.ResearchGate %}
-    <i class="fi-research" style="margin-left:1em"></i>
+    <i class="fa fa-graduation-cap" style="margin-left:1em"></i>
     <a href="{{ page.ResearchGate.url }}" style="margin-left:0.5em"> {{ page.ResearchGate.text }}</a>
     {% endif %}
 
